--- a/style.css
+++ b/style.css
@@ -301,11 +301,14 @@ nav a:hover {
   height: max-content;
   padding: 10% 0;
 }
+.project h2 {
+  margin-bottom: 90px;
+}
 .card-project {
-  margin-bottom: 40px;
+  margin-bottom: 15%;
 }
 .card-project2 {
-  margin-bottom: 40px;
+  margin-bottom: 15%;
 }
 .card-project2 img {
   width: 500px;
