--- a/style.css
+++ b/style.css
@@ -469,7 +469,7 @@ nav a:hover {
   }
   .project {
     width: 100%;
-    padding: 10% 0;
+    padding: 10% 20px;
   }
   .card-project2 img {
     width: 100%;
@@ -481,15 +481,20 @@ nav a:hover {
   }
   .card-project {
     padding: 0 20px;
+    overflow-x: hidden;
   }
   .card-project2 {
     flex-direction: column-reverse;
     align-items: flex-start;
     padding: 0 20px;
+    overflow-x: hidden;
   }
 
   .card-des {
     width: 100%;
+  }
+  .card-des h3 {
+    font-size: 2rem;
   }
   .contact {
     width: 100%;
@@ -501,6 +506,7 @@ nav a:hover {
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   header {
     width: 100%;
+    z-index: 2;
   }
   .overlay {
     position: fixed;
@@ -583,7 +589,7 @@ nav a:hover {
   }
   .project {
     width: 100%;
-    padding: 15% 0;
+    padding: 15% 20px;
   }
   .card-project2 img {
     width: 100%;
@@ -595,11 +601,13 @@ nav a:hover {
   }
   .card-project {
     padding: 0 20px;
+    overflow-x: hidden;
   }
   .card-project2 {
     flex-direction: column-reverse;
     align-items: flex-start;
     padding: 0 20px;
+    overflow-x: hidden;
   }
   .card-project p {
     font-size: 2rem;
@@ -645,5 +653,17 @@ nav a:hover {
   }
   .a-propos {
     padding: 0 10%;
+  }
+  .project {
+    padding: 0 40px;
+  }
+  .card-project {
+    overflow-x: hidden;
+  }
+  .card-project2 {
+    overflow-x: hidden;
+  }
+  .link-sociaux {
+    display: none;
   }
 }
